Add option query param in FindAll handler
